    structures within the flush that don't correspond 
    to state actually within the current flush.
    [ticket:2082]

- sql
  - Added a fully descriptive error message for the
    case where Column is subclassed and _make_proxy()
    fails to make a copy due to TypeError on the
    constructor.   The method _constructor should
    be implemented in this case.

0.7.0b2
========
- orm
  - Fixed bug whereby Session.merge() would call the
    load() event with one too few arguments.
    [ticket:2053]

  - Added logic which prevents the generation of 
    events from a MapperExtension or SessionExtension 
    from generating do-nothing events for all the methods 
    not overridden. [ticket:2052]

- sql
  - Renamed the EngineEvents event class to 
    ConnectionEvents.  As these classes are never
    accessed directly by end-user code, this strictly
    is a documentation change for end users.  Also
    simplified how events get linked to engines
    and connections internally. [ticket:2059]

  - The Sequence() construct, when passed a MetaData() 
    object via its 'metadata' argument, will be 
    included in CREATE/DROP statements within
    metadata.create_all() and metadata.drop_all(), 
    including "checkfirst" logic.  [ticket:2055]

  - The Column.references() method now returns True
    if it has a foreign key referencing the
    given column exactly, not just it's parent
    table.  [ticket:2064]

- postgresql
  - Fixed regression from 0.6 where SMALLINT and
    BIGINT types would both generate SERIAL
    on an integer PK column, instead of 
    SMALLINT and BIGSERIAL [ticket:2065]

- ext
  - Association proxy now has correct behavior for
    any(), has(), and contains() when proxying
    a many-to-one scalar attribute to a one-to-many
    collection (i.e. the reverse of the 'typical'
    association proxy use case)  [ticket:2054]

- examples
  - Beaker example now takes into account 'limit'
    and 'offset', bind params within embedded